// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text bold prop sets font-weight 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  font-weight: 700;
}

<div
  className="c0"
/>
`;

exports[`Text caps prop sets text-transform 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
}

<div
  className="c0"
/>
`;

exports[`Text mt prop sets margin-top 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  margin-top: 8px;
}

<div
  className="c0"
/>
`;

exports[`Text regular prop sets font-weight 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  font-weight: 400;
}

<div
  className="c0"
/>
`;

exports[`Text renders 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
}

<div
  className="c0"
/>
`;

exports[`Text textAlign prop sets text-align 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
}

<div
  className="c0"
/>
`;
